--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen $PORT;
+
     location / {
         root   /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
